fix(OpenCloseBox.jsx) show width bar on opening overflow width

--- a/src/components/parts/OpenCloseBox/OpenCloseBox.css
+++ b/src/components/parts/OpenCloseBox/OpenCloseBox.css
@@ -121,9 +121,13 @@
 }
 
 .content-container-opening-x {
-	height: 0 !important; 
+	/*height: 0 !important; 
+	min-height: 0;
+	overflow: hidden;*/
+	height: 1px !important;
 	min-height: 0;
 	overflow: hidden;
+	visibility: hidden;
 }
 
 .content-container-opening-x-max-width {
@@ -131,6 +135,11 @@
 	min-height: 0;
 	overflow: hidden;
 	max-width: 100%;
+	
+	/*height: 1px;
+	min-height: 0;
+	overflow: hidden;
+	visibility: hidden;*/
 }
 
 .content-container-opening-y {
@@ -142,7 +151,7 @@
 
 }
 
-/* =================== Scrollbar */
+/* =================== Content Container  */
 .box-body::-webkit-scrollbar { 
   height: 16px;
   width: 16px;
